// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage handles optional subtitle 1`] = `
Array [
  <header>
    <nav
      className="border-bottom navbar navbar-expand-lg navbar-light bg-white"
      role="navigation"
    >
      <div
        className="container-fluid"
      >
        <nav
          className="navbar"
        >
          <img
            alt="edX logo"
            src="icon/mock/path"
            width={50}
          />
        </nav>
        <nav
          aria-label="Secondary"
          className="nav secondary-menu-container align-items-center ml-auto"
        >
          <a
            className="text-gray-700 mr-3"
            href="https://support.url"
          >
            Help
          </a>
          <div
            className="dropdown"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="btn-avatar pgn__avatar-button-avatar pgn__avatar-button-avatar-md dropdown-toggle btn btn-tertiary btn-md"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <img
                alt=""
                className="pgn__avatar pgn__avatar-sm"
                src="htts://img.url"
              />
            </button>
          </div>
        </nav>
      </div>
    </nav>
  </header>,
  <main
    className="error-page-container"
    id="content"
  >
    <div
      className="container-fluid"
    >
      <div
        className="col-lg-10 col-12 offset-lg-1"
      >
        <h1
          className="error-page-title h2"
        >
          Error occurred while processing your request
        </h1>
        <div
          className="error-page-message"
        >
          Here goes the error message.
        </div>
      </div>
    </div>
  </main>,
  <div
    data-testid="site-footer"
  />,
]
`;

exports[`ErrorPage handles optional title 1`] = `
Array [
  <header>
    <nav
      className="border-bottom navbar navbar-expand-lg navbar-light bg-white"
      role="navigation"
    >
      <div
        className="container-fluid"
      >
        <nav
          className="navbar"
        >
          <img
            alt="edX logo"
            src="icon/mock/path"
            width={50}
          />
        </nav>
        <nav
          aria-label="Secondary"
          className="nav secondary-menu-container align-items-center ml-auto"
        >
          <a
            className="text-gray-700 mr-3"
            href="https://support.url"
          >
            Help
          </a>
          <div
            className="dropdown"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="btn-avatar pgn__avatar-button-avatar pgn__avatar-button-avatar-md dropdown-toggle btn btn-tertiary btn-md"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <img
                alt=""
                className="pgn__avatar pgn__avatar-sm"
                src="htts://img.url"
              />
            </button>
          </div>
        </nav>
      </div>
    </nav>
  </header>,
  <main
    className="error-page-container"
    id="content"
  >
    <div
      className="container-fluid"
    >
      <div
        className="col-lg-10 col-12 offset-lg-1"
      >
        <h1
          className="error-page-title h2"
        >
          Error occurred while processing your request
        </h1>
        <div
          className="error-page-message"
        >
          Here goes the error message.
        </div>
      </div>
    </div>
  </main>,
  <div
    data-testid="site-footer"
  />,
]
`;

exports[`ErrorPage properly renders page layout with title and subtitle 1`] = `
Array [
  <header>
    <nav
      className="border-bottom navbar navbar-expand-lg navbar-light bg-white"
      role="navigation"
    >
      <div
        className="container-fluid"
      >
        <nav
          className="navbar"
        >
          <img
            alt="edX logo"
            src="icon/mock/path"
            width={50}
          />
        </nav>
        <nav
          aria-label="Secondary"
          className="nav secondary-menu-container align-items-center ml-auto"
        >
          <a
            className="text-gray-700 mr-3"
            href="https://support.url"
          >
            Help
          </a>
          <div
            className="dropdown"
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="btn-avatar pgn__avatar-button-avatar pgn__avatar-button-avatar-md dropdown-toggle btn btn-tertiary btn-md"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <img
                alt=""
                className="pgn__avatar pgn__avatar-sm"
                src="htts://img.url"
              />
            </button>
          </div>
        </nav>
      </div>
    </nav>
  </header>,
  <main
    className="error-page-container"
    id="content"
  >
    <div
      className="container-fluid"
    >
      <div
        className="col-lg-10 col-12 offset-lg-1"
      >
        <h1
          className="error-page-title h2"
        >
          Something went wrong
        </h1>
        <h2
          className="error-page-subtitle h3"
        >
          More details here
        </h2>
        <div
          className="error-page-message"
        >
          Here goes the error message.
        </div>
      </div>
    </div>
  </main>,
  <div
    data-testid="site-footer"
  />,
]
`;
